feat(Monitor): Ajout d'une page information sur un projet
